@@ -35,6 +35,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.json:json:20210307'
+
 }
 
 javafx {
@@ -42,7 +44,17 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
 }
 
-mainClassName = 'PlanwritepageFrame'
+application {
+    mainClass = 'com.example.planj.PlanwritepageFrame' // 메인 클래스 경로를 지정하세요
+}
+
+run {
+    jvmArgs = [
+            "--add-exports", "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED"
+    ]
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
